--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -266,6 +266,10 @@
 }
 
 .woocommerce-checkout-review-order-table {
+	th {
+		white-space: nowrap;
+	}
+
 	.product-name {
 		strong {
 			font-weight: normal;
@@ -594,7 +598,7 @@
 		float: left;
 		width: 100%;
 
-		@media (min-width:$screen-md) {
+		@media (min-width: $screen-md) {
 			margin-bottom: 50px;
 			width: calc(100% - 400px);
 			padding-right: 40px;
@@ -636,7 +640,7 @@
 			}
 
 			.woocommerce-billing-fields {
-				> h3 {
+				>h3 {
 					display: none;
 				}
 			}
@@ -711,6 +715,7 @@
 			.woocommerce-terms-and-conditions-link {
 				transition-duration: 0s;
 			}
+
 			.required-item {
 				border-color: #f00;
 
@@ -827,6 +832,7 @@
 				margin-right: 5px;
 				font-size: 0.8em;
 			}
+
 			@extend .duration;
 		}
 
@@ -884,6 +890,7 @@
 	}
 
 	.site-header {
+
 		.wrap-toggle-sidebar-menu,
 		.site-navigation,
 		.site-tools {
