--- a/assets/css/sass/woocommerce/cart-page.scss
+++ b/assets/css/sass/woocommerce/cart-page.scss
@@ -127,6 +127,43 @@
 		margin-right: 0;
 	}
 
+	.actions {
+		.coupon {
+			width: 100%;
+
+			@media (min-width: $screen-md) {
+				float: left;
+				width: 60%;
+
+				+ [name="update_cart"] {
+					width: 40%;
+				}
+			}
+
+			@media (max-width: $screen-md - 1) {
+				justify-content: center;
+
+				[name="apply_coupon"] {
+					color: #fff;
+				}
+			}
+
+			[name="apply_coupon"] {
+				white-space: nowrap;
+			}
+		}
+
+		[name="coupon_code"] {
+			background-color: transparent;
+		}
+
+		[name="update_cart"] {
+			@media (max-width: $screen-md - 1) {
+				color: #fff;
+			}
+		}
+	}
+
 	@media (min-width: $screen-sm) {
 		tbody {
 			tr {
@@ -193,8 +230,6 @@
 			border: 2px dashed #e8e8e8;
 			padding: 0;
 
-			@media (max-width: $screen-sm - 1) {}
-
 			[name="update_cart"] {
 				border-width: 0 0 0 1px;
 				border-style: dashed;
@@ -203,7 +238,6 @@
 		}
 
 		.coupon {
-			float: left;
 			height: 100px;
 			display: flex;
 			align-items: center;
@@ -214,11 +248,6 @@
 			@media (min-width: $screen-sm) {
 				padding-left: 100px;
 				background-image: url(assets/images/coupon.svg);
-			}
-
-			@media (max-width: $screen-sm - 1) {
-				width: 100%;
-				justify-content: center;
 			}
 
 			label {
@@ -248,16 +277,11 @@
 
 		[name="update_cart"] {
 			height: 100%;
-			min-width: 300px;
-			max-width: 100%;
+			width: 100%;
 			border-radius: 0;
 			font-weight: 600;
 			background-color: #f9f9f9;
 			height: 100px;
-
-			@media (max-width: $screen-sm - 1) {
-				width: 100%;
-			}
 
 			&:before {
 				font-family: $icon;
@@ -291,16 +315,15 @@
 				display: none;
 			}
 
-			input,
-			button {
-				width: calc(50% - 5px);
-				float: left;
+			[name="coupon_code"],
+			[name="apply_coupon"] {
+				width: 100%;
 				padding: 10px 15px;
 			}
 
-			input {
-				margin-right: 10px;
+			[name="coupon_code"] {
 				height: 48px;
+				margin-bottom: 10px;
 			}
 		}
 
