--- a/style.css
+++ b/style.css
@@ -6947,6 +6947,10 @@ footer#colophon {
   border-radius: 2px;
 }
 
+.no-sidebar #toggle-sidebar-mobile-button {
+  display: none;
+}
+
 #toggle-sidebar-mobile-button.active {
   -webkit-transform: translateX(-20px);
   transform: translateX(-20px);
