--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -108,7 +108,7 @@
 		margin-bottom: 0;
 	}
 
-	button[type="submit"] {
+	[name="apply_coupon"] {
 		margin-top: 10px;
 		padding: .35em 40px;
 		height: auto;
@@ -350,6 +350,12 @@
 		border-bottom-color: #ebebeb;
 		border-width: 8px;
 		margin-left: -8px;
+	}
+
+	&:after {
+		content: '';
+		display: block;
+		clear: both;
 	}
 
 	p {
