--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -407,7 +407,26 @@
 		border: 1px solid #d9d9d9;
 		padding: 15px;
 
-		.woocommerce-shipping-totals,
+		.woocommerce-shipping-totals.shipping {
+			td {
+				border-top-width: 1px;
+			}
+
+			.shipping_method {
+				display: none;
+
+				+ label {
+					display: none;
+				}
+
+				&:checked {
+					+ label {
+						display: block;
+					}
+				}
+			}
+		}
+
 		.wc_payment_methods {
 			display: none;
 		}
