update for woobuilder

--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -709,7 +709,7 @@
 
 		li {
 			list-style: none;
-			display: inline-block;
+			display: inline-flex;
 			margin: 0 30px;
 
 			@media (max-width: $screen-tablet - 1) {
