--- a/assets/css/sass/woocommerce/cart-page.scss
+++ b/assets/css/sass/woocommerce/cart-page.scss
@@ -280,8 +280,11 @@
 			width: 100%;
 			border-radius: 0;
 			font-weight: 600;
-			background-color: #f9f9f9;
 			height: 100px;
+
+			&:disabled {
+				color: #fff;
+			}
 
 			&:before {
 				font-family: $icon;
