--- a/assets/css/sass/woocommerce/cart-sidebar.scss
+++ b/assets/css/sass/woocommerce/cart-sidebar.scss
@@ -118,7 +118,8 @@ $media: 599px;
     }
 }
 
-.shop-cart-count{
+.shop-cart-count,
+.wishlist-item-count {
 	padding: 0 5px;
 	height: 18px;
 	color: #fff;
