--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -562,7 +562,7 @@ $size: 40px;
 		.yith-wcwl-wishlistaddedbrowse.show,
 		.yith-wcwl-wishlistexistsbrowse {
 			a {
-				color: #fff;
+				color: #f00;
 			}
 		}
 
