shipping method missing

--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -414,6 +414,16 @@
 				border-top-width: 1px;
 			}
 
+			.woocommerce-shipping-methods {
+				li {
+					&:first-of-type:last-of-type {
+						label {
+							display: block;
+						}
+					}
+				}
+			}
+
 			.shipping_method {
 				display: none;
 
