set order for notification

--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -136,6 +136,10 @@
 		@media (max-width: $screen-md) {
 			display: flex;
 			flex-direction: column-reverse;
+
+			.woocommerce-NoticeGroup {
+				order: 1;
+			}
 		}
 	}
 }
