--- a/assets/css/sass/base/layout/sidebar-menu.scss
+++ b/assets/css/sass/base/layout/sidebar-menu.scss
@@ -207,6 +207,10 @@
 			position: relative;
 		}
 
+		.sub-mega-menu {
+			display: none;
+		}
+
 		.sub-menu {
 			border-radius: 0;
 			pointer-events: auto;
