--- a/assets/css/sass/base/layout/general.scss
+++ b/assets/css/sass/base/layout/general.scss
@@ -48,7 +48,9 @@
 	margin: 3.5em 0;
 	@extend .clearfix;
 
-	.elementor-page &{
+	.elementor-page &,
+	body.et-fb &,
+	body.et-db &{
 		margin: 0;
 	}
 
