--- a/style.css
+++ b/style.css
@@ -9906,18 +9906,39 @@ footer#colophon {
   text-align: right;
 }
 
+#order_review .shop_table thead th {
+  margin-bottom: 10px;
+}
+
+#order_review .shop_table tbody th,
+#order_review .shop_table tbody td {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 #order_review .shop_table tbody th:last-child,
 #order_review .shop_table tbody td:last-child {
   white-space: nowrap;
   margin-left: 10px;
 }
 
+#order_review .shop_table .cart-subtotal th,
+#order_review .shop_table .cart-subtotal td {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 #order_review .shop_table .woocommerce-shipping-totals {
   flex-direction: column;
+  padding-top: 5px;
 }
 
 #order_review .shop_table .woocommerce-shipping-totals td {
   text-align: left !important;
+}
+
+#order_review #shipping_method {
+  margin-top: 0;
 }
 
 #order_review li {
@@ -9938,7 +9959,7 @@ footer#colophon {
 
 .woocommerce-checkout-review-order-table .order-total th,
 .woocommerce-checkout-review-order-table .order-total td {
-  padding: 30px 0;
+  padding: 20px 0;
 }
 
 .woocommerce-checkout-review-order-table #shipping_method input[type="radio"] {
